--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,24 @@
 #imglogo{
     height: 50px;
 }
+
+a{
+    text-decoration: none;
+    color: black;
+}
+a:hover{
+    color: white;
+}
+
+.formulario{
+    border: 3px solid black;
+    border-style: outset!important;
+    border-radius: 1rem;
+}
+
+@media (max-width: 768px) {
+    .formulario{
+        width: 95%!important;
+    }
+}
+
