--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,12 @@ nav a:hover{
     text-decoration-color: black!important;
     transition: 0.2s;
 }
+
+@media (max-width: 1080px) {
+    .margin{
+       margin-left: 2rem;
+    }
+    .margin2{
+        margin-right: 2rem;
+    }   
+   }
