--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,27 @@ a:hover{
     justify-content: center;
     align-items: center;
 }
+.grandiv{
+    margin-top: 3rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+.div{
+    margin: 0 2rem;
+}
 iframe{
-    height: 20rem;
+    width: 100%;
+    height: 100%;
+}
+@media (max-width: 780px) {
+ .grandiv{
+    display: flex;
+    flex-direction: column;
+ }
+ iframe{
+    height: 30rem;
+ }
 }
 
 @media (max-width: 1080px) {
